--- a/Assignments/geodata/where.html
+++ b/Assignments/geodata/where.html
@@ -45,8 +45,8 @@
 <div id="map_canvas" style="height: 500px"></div>
 <p><b>About this Map</b></p>
 <p>
-This is a cool map from 
-<a href="http://www.pythonlearn.com">www.pythonlearn.com</a>.
+This map shows food pantries in the South Bronx. Homeless families, especially those with children, can obtain healthy food at these locations. This map is continuously being updated with more locations and features. If you would like to add a location to this map, email me at glennselwynvel@gmail.com. Include the name of the organization, address, and times of the food pantry handouts. Thank you for contributing to this open source project.
+
 </p>
 </body>
 </html>
